# Blars

./: Cargo.toml  README.md
src/: compare.rs  complex.rs  lib.rs
src/vec_ops/: abs_sum.rs  mod.rs
